# mule

./: .gitignore  README.md  mule.cabal  stack.yaml
app/: Config.hs  Main.hs
src/: InferenceEngine.hs  Inferences.hs  Interpretation.hs  Lambda.hs  Pipeline.hs  Projection.hs  Translator.hs
src/grammar/: init_bnfc.sh  init_gf.sh
src/grammar/BNFC/: AST.cf  AbsAST.hs  AbsTree.hs  DocAST.txt  DocTree.txt  LexAST.hs  LexTree.hs  Makefile  ParAST.hs  ParTree.hs  PrintAST.hs  PrintTree.hs  SkelAST.hs  SkelTree.hs  TestAST  TestAST.hs  TestTree  TestTree.hs  Tree.cf  init.sh
src/grammar/BNFC/NaturalLogic/: AbsNaturalLogic.hs  DocNaturalLogic.txt  LexNaturalLogic.hs  Makefile  NaturalLogic.cf  ParNaturalLogic.hs  PrintNaturalLogic.hs  SkelNaturalLogic.hs  TestNaturalLogic  TestNaturalLogic.hs
src/grammar/BNFC/PredicateLogic/: AbsPredicateLogic.hs  DocPredicateLogic.txt  LexPredicateLogic.hs  Makefile  ParPredicateLogic.hs  PredicateLogic.cf  PrintPredicateLogic.hs  SkelPredicateLogic.hs  TestPredicateLogic  TestPredicateLogic.hs
src/grammar/BNFC/TPTP/: AbsTPTP.hs  DocTPTP.txt  LexTPTP.hs  Makefile  ParTPTP.hs  PrintTPTP.hs  SkelTPTP.hs  TPTP.cf  TestTPTP  TestTPTP.hs
src/grammar/GF/: Application.gf  Application.pgf  ApplicationDut.gf  ApplicationEng.gf  ApplicationGer.gf  ApplicationPL.gf  ApplicationTPTP.gf  ApplicationTree.gf  Core.gf  CoreDut.gf  CoreEng.gf  CoreI.gf  CoreTree.gf  Domain.gf  DomainDut.gf  DomainEng.gf  DomainGer.gf  DomainTree.gf  Lexicon.gf  LexiconEng.gf  Shared.gf  SharedDut.gf  SharedEng.gf  SharedGer.gf  SharedTree.gf  init.sh
src/grammar/GF/domain/darts/: Darts.gf  DartsDut.gf  DartsEng.gf  DartsGer.gf  DartsPL.gf  DartsTPTP.gf  DartsTree.gf  Domain.gf  DomainDut.gf  DomainEng.gf  DomainGer.gf  Names.gf  NamesDut.gf  NamesEng.gf  NamesGer.gf  entailments.yaml
src/rules/: Darts.hs  Polarity.hs  Rules.hs  ScopalVerbs.hs  Structural.hs
src/rules/domain/: Darts.hs
src/rules/shared/: Core.hs  ScopalVerbs.hs
test/: ASTTest.hs  InferenceTest.hs  TreeTest.hs
(+47 files in other folders)
